tests/compiler/errors/const_non_literal.casa
# expect: SYNTAX
const MAX some_variable
